Uploaded image for project: 'Qt Visual Studio Tools'
  1. Qt Visual Studio Tools
  2. QTVSADDINBUG-347

When creating a console application via the New Qt Project wizard you don't get a chance to use precompiled headers in the application

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 3.2.0
    • 1.2.2, 2.8.0
    • General
    • None
    • f13f03fb5 (dev)

    Description

      When creating a console application via the New Qt Project wizard you don't get a chance to use precompiled headers in the application. There is no reason for them to be excluded so it should be possible to enable this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            heimrich Karsten Heimrich
            andysh Andy Shaw
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes