Unify precompiled header support

Instead of implementing it in every wizard, make the setting
available on the config page. Enable support for "Console" and
"QML" projects.

Fixes: QTVSADDINBUG-347
Change-Id: If621b32d8d9c496a0ceba87de745f8e3c92fc75b
Reviewed-by: Miguel Costa <miguel.costa@qt.io>
Reviewed-by: Ali Can Demiralp <ali.demiralp@qt.io>