Templates/quick/main.cpp
@@ -1,5 +1,4 @@
-#include <QGuiApplication>
-#include <QQmlApplicationEngine>
+$include$
 
 int main(int argc, char *argv[])
 {
